menambah endpoint baru
